--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,18 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      My Music Life
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <ion-row>
+    <ion-col size="12">
+       <img src='../../assets/download.jpg'>
+      </ion-col>
+      <ion-button href='/toc'>Table of Contents</ion-button>
+  </ion-row>
   </div>
 </ion-content>
